tests/ui/mismatched_types/mismatched-bound-projection-predicate.stderr
error[E0271]: type mismatch resolving `<&Vec<&Foo> as IntoIterator>::Item == &Foo`
  --> $DIR/mismatched-bound-projection-predicate.rs:8:13
   |
LL |     bar.bar(foos);
   |         --- ^^^^ expected `&Foo`, found `&&Foo`
   |         |
   |         required by a bound introduced by this call
   |
   = note: expected reference `&Foo`
              found reference `&&Foo`
note: the method call chain might not have had the expected associated types
  --> $DIR/mismatched-bound-projection-predicate.rs:6:21
   |
LL | fn foo(foos: Vec<Foo>) {
   |              -------- `IntoIterator::Item` is `Foo` here
LL |     let foos = foos.iter().collect::<Vec<_>>();
   |                     ^^^^^^ ------------------- `IntoIterator::Item` remains `&Foo` here
   |                     |
   |                     `IntoIterator::Item` changed to `&Foo` here
note: required by a bound in `Bar::bar`
  --> $DIR/mismatched-bound-projection-predicate.rs:17:37
   |
LL |     pub fn bar<I>(&self, iter: I)
   |            --- required by a bound in this associated function
LL |     where
LL |         for<'a> &'a I: IntoIterator<Item = &'a Foo>,
   |                                     ^^^^^^^^^^^^^^ required by this bound in `Bar::bar`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
